--- a/about/templates/about/about.html
+++ b/about/templates/about/about.html
@@ -209,7 +209,7 @@
                         </div>
                         <div class="text-center py-4">
                             <h4 class="text-primary Buniwa">Giulio Mukaathe</h4>
-                            <p class="text-uppercase m-0">CEO & Co-founder</p>
+                            <p class="text-uppercase m-0">Chief Executive Officer & Founder</p>
                         </div>
                     </div>
                 </div>
@@ -226,7 +226,7 @@
                         </div>
                         <div class="text-center py-4">
                             <h4 class="text-primary Buniwa">Lazarus Walukhanja</h4>
-                            <p class="text-uppercase m-0">COO & Co-founder</p>
+                            <p class="text-uppercase m-0">Chief Operating Officer</p>
                         </div>
                     </div>
                 </div>
